--- a/src/app/component/chat-rooms/chat-rooms.component.html
+++ b/src/app/component/chat-rooms/chat-rooms.component.html
@@ -2,158 +2,175 @@
 <link href="/examples/vendors/bootstrap-4.3/css/bootstrap.min.css" rel="stylesheet">
 <div class="container">
 
-<div class="messaging">
-  <div class="inbox_msg">
-    <div class="row">
-      <div class="col">
-    <div class="inbox_people">
+  <div class="messaging">
+    <div class="inbox_msg">
+      <div class="row">
+        <div class="col">
+          <div class="inbox_people">
 
-      <div class="headind_srch">
-        <div class="channel_heading">
-          <form (submit)="getChatRooms(room.value)" class="form-group">
-            <label>
-              <input type="text" placeholder="Search..." #room class="searchInput" size="10">
-            </label>
-            <button class="btn btn-navbar"><i class="fa fa-search"></i></button>
+            <div class="headind_srch">
+              <div class="channel_heading">
+                <form (submit)="getChatRooms(room.value)" class="form-group">
+                  <label>
+                    <input type="text" placeholder="Search..." #room class="searchInput" size="10">
+                  </label>
+                  <button class="btn btn-navbar"><i class="fa fa-search"></i></button>
+                </form>
+
+                <div class="dialog">
+                  <!-- <button (click)="openAddFileDialog()" class="btn btn-navbar">Group Chat</button> -->
+                  <button (click)="open(content)" class="btn btn-navbar">Group Chat</button>
+                </div>
+
+                <div class="btn-group dropright">
+
+                  <button type="button" class="btn btn-navbar" data-toggle="dropdown" aria-haspopup="true"
+                          aria-expanded="false">
+                    Chat with...
+                  </button>
+
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <form (submit)="getParticipant(participant.value)" class="form-group">
+                      <label>
+                        <input [formControl]="queryField" type="text" placeholder="Search..." #participant
+                               class="searchInput" size="10">
+                      </label>
+                      <button class="btn btn-navbar"><i class="fa fa-search"></i></button>
+                    </form>
+                    <button class="dropdown-item btn-sm" *ngFor="let participant of allParticipants"
+                            (click)="getPrivateChatRoom(participant.id)">
+                      {{participant.name}}
+                    </button>
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+            <div class="inbox_chat">
+              <div class="channels" *ngFor="let room of chatRooms.slice().reverse()">
+                <div class="chat_list">
+                  <h5 (click)="setCurrentRoom(room);cleanUnreadMessagesForCurrentRoom()">{{room.name}}
+                    <div style="color: white; background-color: seagreen;width: 36px; border-radius: 5px;"
+                         *ngIf="room.amountUnreadMessages !== 0">
+                      <div style="margin-left: 13px;">
+                        {{room.amountUnreadMessages}}
+                      </div>
+                    </div>
+                    <div *ngIf="room.chatType !== 'SYSTEM'">
+                      <div>
+                        <button class="btn btn-navbar" (click)="deleteChatRoom(room)">
+                          <i class="fa fa-trash" aria-hidden="true"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </h5>
+                  <div *ngIf="room.chatType === 'GROUP'">
+                    <div class="dropdown">
+                      <button class="btn btn-navbar" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                              aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-pencil-square" aria-hidden="true"></i>
+                      </button>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <div *ngIf="currentUser.id === room.ownerId">
+                          <button class="dropdown-item btn-md" (click)="rename(name, room)">Rename</button>
+                          <button class="dropdown-item btn-md" (click)="addParticipantsChatRoom(manage2, room)">Add
+                            member
+                          </button>
+                          <button class="dropdown-item btn-md" (click)="removeParticipantsChatRoom(manage, room)">Remove
+                            member
+                          </button>
+                        </div>
+                        <button class="dropdown-item btn-md" (click)="viewGroupInfo(info, room)">View group info
+                        </button>
+                        <div *ngIf="currentUser.id !== room.ownerId">
+                          <button class="dropdown-item btn-md" (click)="leaveGroupChat(room.id)">Leave group chat
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <app-chat-messages *ngIf="currentClickedRoom"
+                             [room]=currentClickedRoom
+                             [currentUser]="currentUser"
+          ></app-chat-messages>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Create group chat:</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <table class="table">
+      <tr>
+        <th colspan="2">Choose members:</th>
+        <th>Chat name:</th>
+      </tr>
+      <tr>
+        <td>
+          <div *ngFor="let participant of allParticipants" (click)="add(participant)">
+            {{participant.name}}
+          </div>
+        </td>
+        <td>
+          <div *ngFor="let part of list" (click)="remove(part)">
+            {{part.name}}
+          </div>
+        </td>
+        <td>
+          <form>
+            <input type="text" id="chatName">
+            <button (click)="createGroupChat()" class="btn btn-outline-dark">Create</button>
+            <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
           </form>
+        </td>
+      </tr>
+    </table>
+  </ng-template>
 
-          <div class="dialog">
-          <!-- <button (click)="openAddFileDialog()" class="btn btn-navbar">Group Chat</button> -->
-          <button (click)="open(content)" class="btn btn-navbar">Group Chat</button>
-          </div>
 
-          <div class="btn-group dropright">
+  <ng-template #info let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Group info</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div><strong>Chat name: </strong>{{currentClickedRoom.name}}</div>
+    <div><strong>Current members:</strong></div>
+    <div *ngFor="let part of currentClickedRoom.participants">
+      {{part.name}}
+    </div>
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.close('Save click')">Cancel</button>
+  </ng-template>
 
-            <button type="button" class="btn btn-navbar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Chat with...
-            </button>
 
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <form (submit)="getParticipant(participant.value)" class="form-group">
-                <label>
-                  <input [formControl]="queryField" type="text" placeholder="Search..." #participant class="searchInput" size="10">
-                </label>
-                <button class="btn btn-navbar"><i class="fa fa-search"></i></button>
-              </form>
-              <button class="dropdown-item btn-sm" *ngFor="let participant of allParticipants" (click)="getPrivateChatRoom(participant.id)">
-                {{participant.name}}
-              </button>
-            </div>
-
-          </div>
-
-        </div>
+  <ng-template #name let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Rename</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <form class="form-inline">
+      <div class="form-group mx-sm-3 mb-2">
+        <input type="text" id="chatName" name="chatName" #chatName="ngModel" [(ngModel)]="model.chatName" #chatName
+               class="form-control" size="50" placeholder="Old name: {{currentClickedRoom.name}}">
       </div>
-      <div class="inbox_chat">
-        <div class="channels" *ngFor="let room of chatRooms.slice().reverse()">
-          <div class="chat_list">
-          <h5  (click)="setCurrentRoom(room)">{{room.name}}
-            <div *ngIf="room.chatType !== 'SYSTEM'">
-              <div>
-                  <button  class="btn btn-navbar" (click)="deleteChatRoom(room)">
-                  <i class="fa fa-trash" aria-hidden="true"></i>
-                </button>
-              </div>
-            </div>
-        </h5>
-          <div *ngIf="room.chatType === 'GROUP'">
-          <div class="dropdown">
-            <button class="btn btn-navbar" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-pencil-square" aria-hidden="true"></i>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <div *ngIf="currentUser.id === room.ownerId">
-              <button class="dropdown-item btn-md" (click)="rename(name, room)">Rename</button>
-              <button class="dropdown-item btn-md" (click)="addParticipantsChatRoom(manage2, room)">Add member</button>
-              <button class="dropdown-item btn-md" (click)="removeParticipantsChatRoom(manage, room)">Remove member</button>
-              </div>
-              <button class="dropdown-item btn-md" (click)="viewGroupInfo(info, room)">View group info</button>
-              <div *ngIf="currentUser.id !== room.ownerId">
-                <button class="dropdown-item btn-md" (click)="leaveGroupChat(room.id)">Leave group chat</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-    <app-chat-messages *ngIf="currentClickedRoom"
-                       [room]=currentClickedRoom
-                       [currentUser]="currentUser"
-    ></app-chat-messages>
-  </div>
-    </div>
-</div>
-</div>
-
-<ng-template #content let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Create group chat:</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-   <table class="table">
-    <tr>
-      <th colspan="2">Choose members:</th>
-      <th>Chat name:</th>
-    </tr>
-    <tr>
-      <td>
-    <div *ngFor="let participant of allParticipants" (click)="add(participant)">
-      {{participant.name}}
-    </div>
-      </td>
-      <td>
-        <div *ngFor="let part of list" (click)="remove(part)">
-        {{part.name}}
-        </div>
-      </td>
-      <td>
-        <form>
-          <input type="text" id="chatName">
-        <button (click)="createGroupChat()" class="btn btn-outline-dark">Create</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
-        </form>
-      </td>
-    </tr>
-</table>
-</ng-template>
-
-
-<ng-template #info let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Group info</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-<div><strong>Chat name: </strong>{{currentClickedRoom.name}}</div>
-<div><strong>Current members:</strong></div>
-<div *ngFor="let part of currentClickedRoom.participants">
-{{part.name}}
-</div>
-<button type="button" class="btn btn-outline-secondary" (click)="modal.close('Save click')">Cancel</button>
-</ng-template>
-
-
-<ng-template #name let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Rename</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <form class="form-inline">
-    <div class="form-group mx-sm-3 mb-2">
-      <input type="text" id="chatName" name="chatName" #chatName="ngModel" [(ngModel)]="model.chatName" #chatName
-      class="form-control" size="50" placeholder="Old name: {{currentClickedRoom.name}}">
-    </div>
-    <button type="submit" class="btn btn-outline-secondary" (click)="renameGroupChat(currentClickedRoom)">Rename</button>
-    <button type="submit" class="btn btn-outline-secondary" (click)="modal.close('Save click')">Cancel</button>
-  </form>
+      <button type="submit" class="btn btn-outline-secondary" (click)="renameGroupChat(currentClickedRoom)">Rename
+      </button>
+      <button type="submit" class="btn btn-outline-secondary" (click)="modal.close('Save click')">Cancel</button>
+    </form>
   </ng-template>
 
   <ng-template #manage let-modal>
@@ -165,12 +182,12 @@
     </div>
     <table class="table">
       <tr>
-       <td>
-        <div *ngFor="let participant of list" (click)="remove(participant)">
-          <div *ngIf="participant.id !== currentUser.id">
-          {{participant.name}}
+        <td>
+          <div *ngFor="let participant of list" (click)="remove(participant)">
+            <div *ngIf="participant.id !== currentUser.id">
+              {{participant.name}}
+            </div>
           </div>
-        </div>
         </td>
         <!-- <td>
           <div *ngFor="let part of list" (click)="remove(part)">
@@ -194,16 +211,16 @@
     </div>
     <table class="table">
       <tr>
-       <td>
-        <div *ngFor="let participant of allParticipants" (click)="add(participant)">
-          <div *ngIf="participant.id !== currentUser.id">
-          {{participant.name}}
+        <td>
+          <div *ngFor="let participant of allParticipants" (click)="add(participant)">
+            <div *ngIf="participant.id !== currentUser.id">
+              {{participant.name}}
+            </div>
           </div>
-        </div>
         </td>
         <td>
           <div *ngFor="let part of list">
-          {{part.name}}
+            {{part.name}}
           </div>
         </td>
         <!-- <td>
